<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Finance Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_main">Balance</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_app">About app</string>
    <string name="nav_history">Operations history</string>
    <string name="nav_scheduled_transactions">Scheduled</string>
    <string name="nav_templates">Templates</string>
    <string name="nav_statistics">Statistics</string>

    <string name="feedback">Feedback</string>

    <string name="add_button">Add</string>
    <string name="cancel_button">Cancel</string>
    <string name="build_statistics">Build graph</string>

    <string name="add_transaction">Add transaction</string>

    <string name="salary">Salary</string>
    <string name="shopping">Shopping</string>
    <string name="education">Education</string>

    <string name="balance">Balance</string>
    <string name="RUB">RUB</string>

    <string name="new_account">Add account</string>

    <string name="quantity">Quantity</string>
    <string name="category">Category</string>
    <string name="account">Account</string>
    <string name="repeat_day">Repeat after, days</string>

    <string name="choose_account_type">Choose type of account</string>
    <string name="choose_currency_type">Choose type of currency</string>
    <string name="transaction_canceled">Canceled</string>
    <string name="transaction_waiting">Waiting</string>
    <string name="transaction_done">Done</string>
    <string name="transaction_template">Template</string>

    <string name="all_currency" translatable="false">All currency</string>
    <string name="operation_type" translatable="false">Operation type</string>
    <string name="category_items" translatable="false">Category items</string>
    <string name="account_type" translatable="false">Account type</string>

    <string name="USD" translatable="false">USD</string>

    <string-array name="currency_spinner" translatable="false">
        <item>USD</item>
    </string-array>

    <string-array name="all_currency" translatable="false">
        <item>RUB</item>
        <item>USD</item>
    </string-array>

    <string name="enlistment">Enlistment</string>
    <string name="debit">Debit</string>
    <string name="all_operation_type">All operation type</string>
    <string name="all_categories">All categories</string>
    <string name="all_accounts">All accounts</string>
    <string name="none">None</string>

    <string-array name="operation_type">
        <item>@string/enlistment</item>
        <item>@string/debit</item>
    </string-array>

    <string-array name="statistic_operation_type">
        <item>@string/all_operation_type</item>
        <item>@string/enlistment</item>
        <item>@string/debit</item>
    </string-array>

    <string name="appInfo" translatable="false">Finance tracking application</string>
    <string name="devBy" translatable="false">Developed by Aleksei Martoyas for Yandex Mobile Development School, 2018</string>
    <string name="course_dollar">Dollar exchange rate</string>
    <string name="stat_period_start">Beginning of period</string>
    <string name="stat_period_finish">End of the period</string>
    <string name="filter_not_operations">There are no transactions for the selected filter</string>
    <string name="history_not_operations">No transactions</string>
    <string name="templates_not_operations">No template transactions</string>
    <string name="scheduled_not_operations">No scheduled transactions</string>
    <string name="not_transactions">There is no transaction for the selected account</string>

</resources>
